--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -56,6 +56,8 @@
 	<string>Light</string>
 	<key>NSUserTrackingUsageDescription</key>
 	<string>BIMMERWISE would like to send you personalized service notifications and updates.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>BIMMERWISE needs access to your photo library to allow you to upload vehicle photos and service documentation.</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
