--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -58,6 +58,8 @@
 	<string>Light</string>
 	<key>NSUserTrackingUsageDescription</key>
 	<string>BIMMERWISE would like to send you personalized service notifications and updates.</string>
+	<key>NSUserNotificationsUsageDescription</key>
+	<string>BIMMERWISE needs permission to send you notifications about your bookings, service updates, and important account information.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>BIMMERWISE needs access to your photo library to allow you to upload vehicle photos and service documentation.</string>
 	<key>NSAppTransportSecurity</key>
