--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,6 +15,9 @@ workflows:
         BUNDLE_ID: "com.bimmerwise.app"
         APP_STORE_ID: "your-app-id"  # Get this from App Store Connect
     scripts:
+      - name: Clean Flutter build
+        script: |
+          flutter clean
       - name: Set up code signing settings on Xcode project
         script: |
           xcode-project use-profiles
@@ -24,7 +27,7 @@ workflows:
       - name: Install pods
         script: |
           find . -name "Podfile" -execdir pod install \;
-      - name: Flutter build ipa
+      - name: Flutter build ipa and archive
         script: |
           flutter build ipa --release --export-method=app-store
     artifacts:
