fix ios compatibilty

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,52 +1,45 @@
 workflows:
   ios-workflow:
-    name: iOS Internal TestFlight
+    name: iOS Workflow
     max_build_duration: 120
     instance_type: mac_mini_m1
-
     environment:
       flutter: stable
       xcode: latest
       cocoapods: default
       vars:
-        APP_STORE_CONNECT_ISSUER_ID: Encrypted(...)
+        APP_STORE_CONNECT_ISSUER_ID: Encrypted(...)  # Add your values in Codemagic UI
         APP_STORE_CONNECT_KEY_IDENTIFIER: Encrypted(...)
         APP_STORE_CONNECT_PRIVATE_KEY: Encrypted(...)
+        CERTIFICATE_PRIVATE_KEY: Encrypted(...)
         BUNDLE_ID: "com.bimmerwise.app"
-
+        APP_STORE_ID: "your-app-id"  # Get this from App Store Connect
     scripts:
-      - name: Flutter clean
-        script: flutter clean
-
-      - name: Get dependencies
-        script: flutter pub get
-
+      - name: Clean Flutter build
+        script: |
+          flutter clean
+      - name: Set up code signing settings on Xcode project
+        script: |
+          xcode-project use-profiles
+      - name: Get Flutter packages
+        script: |
+          flutter packages pub get
       - name: Install pods
         script: |
-          cd ios
-          pod install
-
-      - name: Code signing
-        script: xcode-project use-profiles
-
-      - name: Build IPA
+          find . -name "Podfile" -execdir pod install \;
+      - name: Flutter build ipa and archive
         script: |
-          BUILD_NUMBER=$(date +%s)
-          flutter build ipa \
-            --release \
-            --export-method=app-store \
-            --build-number=$BUILD_NUMBER
-
+          flutter build ipa --release --export-method=app-store
     artifacts:
       - build/ios/ipa/*.ipa
-
+      - /tmp/xcodebuild_logs/*.log
+      - flutter_drive.log
     publishing:
       app_store_connect:
         api_key: $APP_STORE_CONNECT_PRIVATE_KEY
         key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER
         issuer_id: $APP_STORE_CONNECT_ISSUER_ID
         submit_to_testflight: true
-
       email:
         recipients:
           - deniel080@gmail.com
