--- a/ios/Podfile
+++ b/ios/Podfile
@@ -4,6 +4,9 @@ platform :ios, '15.0'
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
 
+# Disable Bitcode (deprecated in Xcode 14+)
+ENV['BITCODE_GENERATION_MODE'] = 'bitcode'
+
 project 'Runner', {
   'Debug' => :debug,
   'Profile' => :release,
@@ -41,6 +44,24 @@ post_install do |installer|
     flutter_additional_ios_build_settings(target)
     target.build_configurations.each do |config|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '15.0'
+      
+      # Fix for iOS 15+ and Firebase compatibility
+      config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
+      
+      # Disable Bitcode (deprecated in Xcode 14+)
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
+      
+      # Fix for arm64 simulator on Apple Silicon
+      config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "i386"
+      
+      # Enable module stability
+      config.build_settings['SWIFT_VERSION'] = '5.0'
+      
+      # Fix for Firebase and other pods compatibility
+      xcconfig_path = config.base_configuration_reference.real_path
+      xcconfig = File.read(xcconfig_path)
+      xcconfig_mod = xcconfig.gsub(/DT_TOOLCHAIN_DIR/, "TOOLCHAIN_DIR")
+      File.open(xcconfig_path, "w") { |file| file << xcconfig_mod }
     end
   end
 end
