--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,14 +50,13 @@ flutter:
     - assets/images/whatsappwhite.png
     - assets/other/
     - assets/documents/
+    - assets/images/
 
 flutter_launcher_icons:
   android: true
-  image_path: assets/images/bimmerwise2.png
-  min_sdk_android: 21
-  web:
-    generate: true
-    image_path: assets/images/bimmerwise2.png
+  ios: true
+  remove_alpha_ios: true
+  image_path: assets/images/app_icon.png
 
 flutter_native_splash:
   color: "#000000"
